[package]
name = "statuscode"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
dotenv = "0.15.0"
http = "0.2.6"
log = "0.4.14"
miette = { version = "5.1.0", features = ["fancy"] }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.34"
tracing-actix-web = "0.5.1"
tracing-subscriber = "0.3.11"

[dev-dependencies]
pretty_assertions = "1.2.1"
